--- a/index.html
+++ b/index.html
@@ -763,10 +763,10 @@
                 </div>
                 <div class="basis-1/2 md:basis-1/3 lg:basis-[15%] my-6 lg:my-0">
                     <h4 class="heading text-xl mb-7">Terms</h4>
-                    <p class="my-3"><a href="" class="text-gray-500 dark:text-gray-400 font-medium">TOS</a></p>
-                    <p class="my-3"><a href="" class="text-gray-500 dark:text-gray-400 font-medium">Privacy Policy</a>
+                    <p class="my-3"><a href="./coming-soon.html" class="text-gray-500 dark:text-gray-400 font-medium">TOS</a></p>
+                    <p class="my-3"><a href="./coming-soon.html" class="text-gray-500 dark:text-gray-400 font-medium">Privacy Policy</a>
                     </p>
-                    <p class="my-3"><a href="" class="text-gray-500 dark:text-gray-400 font-medium">Refund Policy</a>
+                    <p class="my-3"><a href="./coming-soon.html" class="text-gray-500 dark:text-gray-400 font-medium">Refund Policy</a>
                     </p>
                 </div>
                 <div class="basis-1/2 md:basis-1/3 lg:basis-[15%] my-6 lg:my-0">
