--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="sticky z-10 w-full lg:w-2/5 2xl:w-1/2 mx-auto text-center mt-20">
             <h1 class="heading text-3xl lg:text-5xl !leading-normal">BitQuote Co.
             </h1>
-            <p class="text-neutral-600 dark:text-gray-400 text-xl font-medium leading-normal my-4">We are a small but passionate group of developers aimed at making wonderful things happen!
+            <p class="text-neutral-600 dark:text-gray-400 text-xl font-medium leading-normal my-4">We're a passionate group of developers aimed at making wonderful things happen!
             </p>
             <div class="flex flex-col lg:flex-row items-center justify-center mt-8 p-6">
                 <a href="https://discord.gg/z9PvsEs2" class="btn bg-[#4a6cf7]">Discord</a>
@@ -243,7 +243,7 @@
                             </div>
                             <div class="text-center">
                                 <h3 class="heading text-2xl mb-2 leading-normal">
-                                    Speed Optimized
+                                    Optimized Speed
                                 </h3>
                                
                             </div>
@@ -298,7 +298,7 @@
                 <h2 class="heading text-white text-3xl lg:text-5xl !leading-normal">We are
                     ready to help
                 </h2>
-                <p class="text-gray-500 dark:text-gray-400 opacity-90 text-xl"> Contact us at <a href="https://discord.gg/z9PvsEs2">**Discord**.</a>
+                <p class="text-gray-500 dark:text-gray-400 opacity-90 text-xl"> Contact us at <a href="https://discord.gg/z9PvsEs2">Discord.</a>
                 </p>
             </div>
         
@@ -314,22 +314,13 @@
             <div class="relative mt-0 md:mt-16 lg:mt-0 basis-1/2 ">
                 <div class="mx-auto my-4 pr-8">
                     <h2 class="heading !leading-normal text-3xl lg:text-4xl">
-                        Fits Into Any Workflow.
+                        Fits into any workflow.
                     </h2>
-                    <p class="text-gray-500 dark:text-gray-400 opacity-90 text-base">our system goes with almost any
-                        kind of integrations and supports almost every platform.
+                    <p class="text-gray-500 dark:text-gray-400 opacity-90 text-base">Our system goes with almost any
+                        kind of integration, and supports almost every platform.
                     </p>
                 </div>
                 <div class="my-4">
-                    <div class="flex items-center justify-between my-4">
-                        <div class="tools-box">
-                            <div class="basis-1/3">
-                                <img src="./img/slack-logo.png" alt="img" class="w-2/3">
-                            </div>
-                            <div class="basis-2/3">
-                                <h4 class="workflow-title">Slack</h4>
-                                <p class="workflow-text">communication</p>
-                            </div>
                         </div>
                         <div class="tools-box">
                             <div class="basis-1/3">
@@ -341,15 +332,6 @@
                             </div>
                         </div>
                     </div>
-                    <div class="flex items-center justify-between my-4">
-                        <div class="tools-box">
-                            <div class="basis-1/3">
-                                <img src="./img/hubstaff-logo.png" alt="img" class="w-2/3">
-                            </div>
-                            <div class="basis-2/3">
-                                <h4 class="workflow-title">Slack</h4>
-                                <p class="workflow-text">communication</p>
-                            </div>
                         </div>
                         <div class="tools-box">
                             <div class="basis-1/3">
@@ -659,7 +641,7 @@
                 <div class="py-16 px-6 lg:px-12">
                     <div class="form-title">
                         <h2 class="heading text-2xl lg:text-3xl font-bold !leading-normal">
-                            Need Help? Open a Ticket
+                            Need help? Open a ticket
                         </h2>
                         <p class="text-gray-500 dark:text-gray-400 text-opacity-90 text-base font-bold">Our support team
                             will get back to you ASAP via email.
@@ -759,7 +741,6 @@
                     <h4 class="heading text-xl mb-7">Useful Links</h4>
                     <p class="my-3"><a href="https://discord.gg/V2bsftCMvh" class="text-gray-500 dark:text-gray-400 font-medium">Discord</a></p>
                     <p class="my-3"><a href="https://github.com/theNuggetLabs/" class="text-gray-500 dark:text-gray-400 font-medium">Github</a></p>
-                    <p class="my-3"><a href="#root" class="text-gray-500 dark:text-gray-400 font-medium">About</a></p>
                 </div>
                 <div class="basis-1/2 md:basis-1/3 lg:basis-[15%] my-6 lg:my-0">
                     <h4 class="heading text-xl mb-7">Terms</h4>
