--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                 <h2 class="heading text-white text-3xl lg:text-5xl !leading-normal">We are
                     ready to help
                 </h2>
-                <p class="text-gray-500 dark:text-gray-400 opacity-90 text-xl"> Contact us at <a href="https://discord.gg/z9PvsEs2">**Discord**.</a>
+                <p class="text-gray-500 dark:text-gray-400 opacity-90 text-xl"> Contact us at <a href="https://discord.gg/z9PvsEs2">Discord.</a>
                 </p>
             </div>
         
