--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
                 <div class="basis-1/2 md:basis-1/3 lg:basis-[15%] my-6 lg:my-0">
                     <h4 class="heading text-xl mb-7">Useful Links</h4>
                     <p class="my-3"><a href="https://discord.gg/V2bsftCMvh" class="text-gray-500 dark:text-gray-400 font-medium">Discord</a></p>
-                    <p class="my-3"><a href="https://github.com/theNuggetLabs/" class="text-gray-500 dark:text-gray-400 font-medium">Github</a></p>
+                    <p class="my-3"><a href="https://github.com/AaravMehta59/" class="text-gray-500 dark:text-gray-400 font-medium">Github</a></p>
                 </div>
                 <div class="basis-1/2 md:basis-1/3 lg:basis-[15%] my-6 lg:my-0">
                     <h4 class="heading text-xl mb-7">Terms</h4>
