--- a/index.html
+++ b/index.html
@@ -741,6 +741,6 @@
     </div>
 </div>
 <script src="./js/script.js"></script>
-<script src="https://itzaarav.netlify.app/dir/codes/me.js"></script>
+<!--<script src="https://itzaarav.netlify.app/dir/codes/me.js"></script>--->
 </body>
 </html>
