Add Montserrat font
Add Montserrat font stylesheet link to index.html.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta name="author" content="axrxvm">
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon"/>
     <link rel="stylesheet" href="./css/output.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
     <!--todo :: add google analytics-->
     <title>BitQuote Co.</title>
 </head>
