--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                     </div>
                     <div class="tools-box">
                         <div class="basis-1/3">
-                            <img src="./img/dropbox-logo.png" alt="img" class="w-2/3">
+                            <img src="./img/slt.png" alt="img" class="w-2/3">
                         </div>
                         <div class="basis-2/3">
                             <h4 class="workflow-title">SLT</h4>
@@ -329,7 +329,7 @@
                 <div class="flex items-center justify-between my-4">
                     <div class="tools-box">
                         <div class="basis-1/3">
-                            <img src="./img/hubstaff-logo.png" alt="img" class="w-2/3">
+                            <img src="./img/arpan.png" alt="img" class="w-2/3">
                         </div>
                         <div class="basis-2/3">
                             <h4 class="workflow-title">Arpan C.</h4>
