--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <li class="px-6 py-4"><a href="#slider" class="menu-item">Home</a></li>
                         <li class="px-6 py-4"><a href="#features" class="menu-item">Features</a></li>
                         <li class="px-6 py-4"><a href="https://discord.gg/z9PvsEs2" class="menu-item">Discord</a></li>
-                        <li class="px-6 py-4"><a href="./api/index.html" class="menu-item">API Docs</a></li>
+                        <li class="px-6 py-4"><a href="./api/index.html" class="menu-item">API</a></li>
                         <li class="px-6 py-4"><a href="#contact-us" class="menu-item">Contact Us</a></li>
                     </ul>
                 </nav>
@@ -352,14 +352,12 @@
         </div>
     </div>
     <br><br><br><br>
-    <!--THE PRICING THING, MADE FOR FUTURE USE (why i waste time)-->
-   <!-- <div class="bg-white dark:bg-dark py-20 md:py-24" id="pricing">
+    <div class="bg-white dark:bg-dark py-20 md:py-24" id="pricing">
         <div class="container px-4 md:px-10 lg:px-0 mx-auto">
             <div class="lg:w-1/2 2xl:w-1/2 mb-16 text-center mx-auto">
                 <h2 class="heading !leading-normal text-3xl lg:text-4xl">Our Projects
                 </h2>
-                <p class="text-gray-500 dark:text-gray-400 opacity-90 text-lg">There are many variations of passages of
-                    Lorem Ipsum available but the majority have suffered alteration in some form.
+                <p class="text-gray-500 dark:text-gray-400 opacity-90 text-lg"><!--i need something to fill this!-->
                 </p>
             </div>
             <div class="flex flex-col lg:flex-row items-center justify-between gap-8 mt-8 ">
@@ -370,10 +368,9 @@
                                     class="text-gray-500"></span></h3>
                             <h4 class="text-right text-neutral-900 dark:text-white font-medium text-2xl"></h4>
                         </div>
-                        <p class="text-gray-400 text-opacity-90 text-base font-medium">Lorem ipsum dolor sit amet
-                            adiscing elit Mauris egestas enim.
+                        <p class="text-gray-400 text-opacity-90 text-base font-medium">An Multi-Purpose Discord Bot to make you discord life bliss!
                         </p>
-                        <button type="submit" class="btn price-btn bg-[#4a6cf7]">Details</button>
+                        <a href="./coming-soon.html"><button type="submit" class="btn price-btn bg-[#4a6cf7]">View More</button></a>
                         <hr class="my-10 bg-gray-600 text-gray-600 w-full opacity-30">
                     </div>
                     <div class="price-description">
@@ -384,7 +381,7 @@
                                     <path d="M2.90567 6.00024C2.68031 6.00024 2.48715 5.92812 2.294 5.74764L0.169254 3.43784C-0.0560926 3.18523 -0.0560926 2.78827 0.169254 2.53566C0.39461 2.28298 0.74873 2.28298 0.974086 2.53566L2.90567 4.66497L7.02642 0.189715C7.25175 -0.062913 7.60585 -0.062913 7.83118 0.189715C8.0566 0.442354 8.0566 0.839355 7.83118 1.09198L3.54957 5.78375C3.32415 5.92812 3.09882 6.00024 2.90567 6.00024Z"></path>
                                  </svg>
                               </span>
-                                All UI Components
+                                Auto-Moderation
                             </li>
                             <li class="price-option">
                               <span class="price-list-style">
@@ -392,8 +389,7 @@
                                     <path d="M2.90567 6.00024C2.68031 6.00024 2.48715 5.92812 2.294 5.74764L0.169254 3.43784C-0.0560926 3.18523 -0.0560926 2.78827 0.169254 2.53566C0.39461 2.28298 0.74873 2.28298 0.974086 2.53566L2.90567 4.66497L7.02642 0.189715C7.25175 -0.062913 7.60585 -0.062913 7.83118 0.189715C8.0566 0.442354 8.0566 0.839355 7.83118 1.09198L3.54957 5.78375C3.32415 5.92812 3.09882 6.00024 2.90567 6.00024Z"></path>
                                  </svg>
                               </span>
-                                All UI Components
-                                Use with Unlimited
+                                Fun Commands
                             </li>
                             <li class="price-option">
                               <span class="price-list-style">
@@ -401,7 +397,7 @@
                                     <path d="M2.90567 6.00024C2.68031 6.00024 2.48715 5.92812 2.294 5.74764L0.169254 3.43784C-0.0560926 3.18523 -0.0560926 2.78827 0.169254 2.53566C0.39461 2.28298 0.74873 2.28298 0.974086 2.53566L2.90567 4.66497L7.02642 0.189715C7.25175 -0.062913 7.60585 -0.062913 7.83118 0.189715C8.0566 0.442354 8.0566 0.839355 7.83118 1.09198L3.54957 5.78375C3.32415 5.92812 3.09882 6.00024 2.90567 6.00024Z"></path>
                                  </svg>
                               </span>
-                                Commercial Use
+                                Music Support
                             </li>
                             <li class="price-option">
                               <span class="price-list-style">
@@ -409,7 +405,7 @@
                                     <path d="M2.90567 6.00024C2.68031 6.00024 2.48715 5.92812 2.294 5.74764L0.169254 3.43784C-0.0560926 3.18523 -0.0560926 2.78827 0.169254 2.53566C0.39461 2.28298 0.74873 2.28298 0.974086 2.53566L2.90567 4.66497L7.02642 0.189715C7.25175 -0.062913 7.60585 -0.062913 7.83118 0.189715C8.0566 0.442354 8.0566 0.839355 7.83118 1.09198L3.54957 5.78375C3.32415 5.92812 3.09882 6.00024 2.90567 6.00024Z"></path>
                                  </svg>
                               </span>
-                                Email Support
+                                Search Commands
                             </li>
                             <li class="price-option">
                               <span class="price-list-style">
@@ -417,7 +413,7 @@
                                     <path d="M2.90567 6.00024C2.68031 6.00024 2.48715 5.92812 2.294 5.74764L0.169254 3.43784C-0.0560926 3.18523 -0.0560926 2.78827 0.169254 2.53566C0.39461 2.28298 0.74873 2.28298 0.974086 2.53566L2.90567 4.66497L7.02642 0.189715C7.25175 -0.062913 7.60585 -0.062913 7.83118 0.189715C8.0566 0.442354 8.0566 0.839355 7.83118 1.09198L3.54957 5.78375C3.32415 5.92812 3.09882 6.00024 2.90567 6.00024Z"></path>
                                  </svg>
                               </span>
-                                Lifetime Access
+                                Ticket System
                             </li>
                             <li class="price-option">
                               <span class="price-list-style">
@@ -425,7 +421,7 @@
                                     <path d="M2.90567 6.00024C2.68031 6.00024 2.48715 5.92812 2.294 5.74764L0.169254 3.43784C-0.0560926 3.18523 -0.0560926 2.78827 0.169254 2.53566C0.39461 2.28298 0.74873 2.28298 0.974086 2.53566L2.90567 4.66497L7.02642 0.189715C7.25175 -0.062913 7.60585 -0.062913 7.83118 0.189715C8.0566 0.442354 8.0566 0.839355 7.83118 1.09198L3.54957 5.78375C3.32415 5.92812 3.09882 6.00024 2.90567 6.00024Z"></path>
                                  </svg>
                               </span>
-                                Free Lifetime Updates
+                                Economy System
                             </li>
                         </ul>
                     </div>
@@ -456,14 +452,13 @@
                 <div class="price-table">
                     <div class="price-title">
                         <div class="flex justify-between mb-4">
-                            <h3 class="text-neutral-900 dark:text-white font-bold text-3xl">$40 <span
-                                    class="text-gray-500">/mo</span></h3>
-                            <h4 class="text-right text-neutral-900 dark:text-white font-medium text-2xl">Lite</h4>
+                            <h3 class="text-neutral-900 dark:text-white font-bold text-3xl">Axis API<span
+                                    class="text-gray-500"></span></h3>
+                            <h4 class="text-right text-neutral-900 dark:text-white font-medium text-2xl"></h4>
                         </div>
-                        <p class="text-gray-400 text-opacity-90 text-base font-medium">Lorem ipsum dolor sit amet
-                            adiscing elit Mauris egestas enim.
+                        <p class="text-gray-400 text-opacity-90 text-base font-medium">An fast-free-multipurpose API with easy usage!
                         </p>
-                        <button type="submit" class="btn price-btn bg-[#4a6cf7]">Start Free Trial</button>
+                        <a href="./coming-soon.html"><button type="submit" class="btn price-btn bg-[#4a6cf7]">View More</button></a>
                         <hr class="my-10 bg-gray-600 text-gray-600 w-full opacity-30">
                     </div>
                     <div class="price-description">
@@ -474,7 +469,7 @@
                                     <path d="M2.90567 6.00024C2.68031 6.00024 2.48715 5.92812 2.294 5.74764L0.169254 3.43784C-0.0560926 3.18523 -0.0560926 2.78827 0.169254 2.53566C0.39461 2.28298 0.74873 2.28298 0.974086 2.53566L2.90567 4.66497L7.02642 0.189715C7.25175 -0.062913 7.60585 -0.062913 7.83118 0.189715C8.0566 0.442354 8.0566 0.839355 7.83118 1.09198L3.54957 5.78375C3.32415 5.92812 3.09882 6.00024 2.90567 6.00024Z"></path>
                                  </svg>
                               </span>
-                                All UI Components
+                                Fast Response
                             </li>
                             <li class="price-option">
                               <span class="price-list-style">
@@ -482,8 +477,7 @@
                                     <path d="M2.90567 6.00024C2.68031 6.00024 2.48715 5.92812 2.294 5.74764L0.169254 3.43784C-0.0560926 3.18523 -0.0560926 2.78827 0.169254 2.53566C0.39461 2.28298 0.74873 2.28298 0.974086 2.53566L2.90567 4.66497L7.02642 0.189715C7.25175 -0.062913 7.60585 -0.062913 7.83118 0.189715C8.0566 0.442354 8.0566 0.839355 7.83118 1.09198L3.54957 5.78375C3.32415 5.92812 3.09882 6.00024 2.90567 6.00024Z"></path>
                                  </svg>
                               </span>
-                                All UI Components
-                                Use with Unlimited
+                                Free Unlimited Usage
                             </li>
                             <li class="price-option">
                               <span class="price-list-style">
@@ -491,7 +485,7 @@
                                     <path d="M2.90567 6.00024C2.68031 6.00024 2.48715 5.92812 2.294 5.74764L0.169254 3.43784C-0.0560926 3.18523 -0.0560926 2.78827 0.169254 2.53566C0.39461 2.28298 0.74873 2.28298 0.974086 2.53566L2.90567 4.66497L7.02642 0.189715C7.25175 -0.062913 7.60585 -0.062913 7.83118 0.189715C8.0566 0.442354 8.0566 0.839355 7.83118 1.09198L3.54957 5.78375C3.32415 5.92812 3.09882 6.00024 2.90567 6.00024Z"></path>
                                  </svg>
                               </span>
-                                Commercial Use
+                                No API Keys
                             </li>
                             <li class="price-option">
                               <span class="price-list-style">
@@ -499,7 +493,7 @@
                                     <path d="M2.90567 6.00024C2.68031 6.00024 2.48715 5.92812 2.294 5.74764L0.169254 3.43784C-0.0560926 3.18523 -0.0560926 2.78827 0.169254 2.53566C0.39461 2.28298 0.74873 2.28298 0.974086 2.53566L2.90567 4.66497L7.02642 0.189715C7.25175 -0.062913 7.60585 -0.062913 7.83118 0.189715C8.0566 0.442354 8.0566 0.839355 7.83118 1.09198L3.54957 5.78375C3.32415 5.92812 3.09882 6.00024 2.90567 6.00024Z"></path>
                                  </svg>
                               </span>
-                                Email Support
+                                Easy to use
                             </li>
                             <li class="price-option">
                               <span class="price-list-style">
@@ -507,7 +501,7 @@
                                     <path d="M2.90567 6.00024C2.68031 6.00024 2.48715 5.92812 2.294 5.74764L0.169254 3.43784C-0.0560926 3.18523 -0.0560926 2.78827 0.169254 2.53566C0.39461 2.28298 0.74873 2.28298 0.974086 2.53566L2.90567 4.66497L7.02642 0.189715C7.25175 -0.062913 7.60585 -0.062913 7.83118 0.189715C8.0566 0.442354 8.0566 0.839355 7.83118 1.09198L3.54957 5.78375C3.32415 5.92812 3.09882 6.00024 2.90567 6.00024Z"></path>
                                  </svg>
                               </span>
-                                Lifetime Access
+                                Multipurpose
                             </li>
                             <li class="price-option">
                               <span class="price-list-style">
@@ -515,7 +509,7 @@
                                     <path d="M2.90567 6.00024C2.68031 6.00024 2.48715 5.92812 2.294 5.74764L0.169254 3.43784C-0.0560926 3.18523 -0.0560926 2.78827 0.169254 2.53566C0.39461 2.28298 0.74873 2.28298 0.974086 2.53566L2.90567 4.66497L7.02642 0.189715C7.25175 -0.062913 7.60585 -0.062913 7.83118 0.189715C8.0566 0.442354 8.0566 0.839355 7.83118 1.09198L3.54957 5.78375C3.32415 5.92812 3.09882 6.00024 2.90567 6.00024Z"></path>
                                  </svg>
                               </span>
-                                Free Lifetime Updates
+                                Many Language Compatible
                             </li>
                         </ul>
                     </div>
@@ -546,17 +540,16 @@
                 <div class="price-table mr-0 lg:mr-8">
                     <div class="price-title">
                         <div class="flex justify-between mb-4">
-                            <h3 class="text-neutral-900 dark:text-white font-bold text-3xl">$40 <span
-                                    class="text-gray-500">/mo</span></h3>
-                            <h4 class="text-right text-neutral-900 dark:text-white font-medium text-2xl">Lite</h4>
+                            <h3 class="text-neutral-900 dark:text-white font-bold text-3xl">Project MCL<span
+                                    class="text-gray-500"></span></h3>
+                            <h4 class="text-right text-neutral-900 dark:text-white font-medium text-2xl"></h4>
                         </div>
-                        <p class="text-gray-400 text-opacity-90 text-base font-medium">Lorem ipsum dolor sit amet
-                            adiscing elit Mauris egestas enim.
+                        <p class="text-gray-400 text-opacity-90 text-base font-medium"> Coming Soon!
                         </p>
-                        <button type="submit" class="btn price-btn bg-[#4a6cf7]">Start Free Trial</button>
-                        <hr class="my-10 bg-gray-600 text-gray-600 w-full opacity-30">
+                        <a href="./coming-soon.html"><button type="submit" class="btn price-btn bg-[#4a6cf7]">View More</button></a>
+                       <!-- <hr class="my-10 bg-gray-600 text-gray-600 w-full opacity-30">-->
                     </div>
-                    <div class="price-description">
+                    <!--<div class="price-description">
                         <ul>
                             <li class="price-option">
                               <span class="price-list-style">
@@ -608,7 +601,7 @@
                                 Free Lifetime Updates
                             </li>
                         </ul>
-                    </div>
+                    </div>-->
                     <div class="absolute bottom-0 right-0">
                         <svg width="179" height="158" viewBox="0 0 179 158" fill="none"
                              xmlns="http://www.w3.org/2000/svg">
@@ -634,8 +627,8 @@
                     </div>
                 </div>
             </div>
-        </div>-->
-    </div>
+        </div>
+    </div><br><br><br><br>
     <div class="py-20 md:py-24 bg-dark dark:bg-dark bg-[url('/img/bg-help.svg')] bg-no-repeat bg-left-bottom bg-contain lg:bg-auto 2xl:bg-cover"
          id="help">
          <div class="container mx-auto px-4">
