--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                 <div class="flex items-center justify-between my-4">
                     <div class="tools-box">
                         <div class="basis-1/3">
-                            <img src="./img/user-aarav.jpg" alt="img" class="w-2/3">
+                            <img src="./img/aarav.jpg" alt="img" class="w-2/3">
                         </div>
                         <div class="basis-2/3">
                             <h4 class="workflow-title">Aarav M.</h4>
