✨ More Bug Fixes

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                         </div>
                         <div class="basis-2/3">
                             <h4 class="workflow-title">Aarav M.</h4>
-                            <p class="workflow-text"><b>Founder & CEO</b></p>
+                            <p class="workflow-text"><b>Developer</b></p>
                            <!--<p class="workflow-text">Works in Node.js</p>--> 
                         </div>
                     </div>
@@ -343,7 +343,7 @@
                         </div>
                         <div class="basis-2/3">
                             <h4 class="workflow-title">Ger</h4>
-                            <p class="workflow-text"><b>Bug Finder</b></p>
+                            <p class="workflow-text"><b>Developer</b></p>
                             <!--<p class="workflow-text">Works in HTML</p>-->
                         </div>
                     </div>
@@ -352,7 +352,7 @@
         </div>
     </div>
     <br><br><br><br>
-    <div class="bg-white dark:bg-dark py-20 md:py-24" id="pricing">
+    <div class="bg-white dark:bg-dark py-20 md:py-24 align-center" id="pricing">
         <div class="container px-4 md:px-10 lg:px-0 mx-auto">
             <div class="lg:w-1/2 2xl:w-1/2 mb-16 text-center mx-auto">
                 <h2 class="heading !leading-normal text-3xl lg:text-4xl">Our Projects
@@ -458,7 +458,7 @@
                         </div>
                         <p class="text-gray-400 text-opacity-90 text-base font-medium">An fast-free-multipurpose API with easy usage!
                         </p>
-                        <a href="./coming-soon.html"><button type="submit" class="btn price-btn bg-[#4a6cf7]">View More</button></a>
+                        <a href="./api/index.html"><button type="submit" class="btn price-btn bg-[#4a6cf7]">View More</button></a>
                         <hr class="my-10 bg-gray-600 text-gray-600 w-full opacity-30">
                     </div>
                     <div class="price-description">
