--- a/index.html
+++ b/index.html
@@ -12,18 +12,15 @@
     <meta name="author" content="axrxvm">
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon"/>
     <link rel="stylesheet" href="./css/output.css">
-    <!--todo :: add google analytics-->
     <title>BitQuote Co.</title>
 </head>
 <body class="bg-white dark:bg-dark seceltion font-Inter">
 <div class="fixed top-0 left-0 z-50 w-full">
     <div class="px-4 py-4 lg:px-8 lg:py-1" id="header">
         <div class="flex items-center justify-between">
-            <!-- Todo is the below code :- fix the size
-                <div class="logo">
-                <img src="./img/logo-light.png" alt="logo" class="hidden dark:block w-44">
-                <img src="./img/logo.png" alt="logo" class="block dark:hidden w-44">
-            </div> -->
+            <div class="logo">
+                <h4 class="workflow-title">BitQuote Co.</h4>
+            </div>
             <div class="navigation hidden lg:block">
                 <nav>
                     <ul class="flex items-center justify-between">
