✨ Even More Bug Fixes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="px-4 py-4 lg:px-8 lg:py-1" id="header">
         <div class="flex items-center justify-between">
             <div class="logo">
-                <h4 class="workflow-title">BitQuote Co.</h4>
+                <h4 class="logo-title">BitQuote Co.</h4>
             </div>
             <div class="navigation hidden lg:block">
                 <nav>
