✨ Even More Bugs!
HAHA

--- a/index.html
+++ b/index.html
@@ -19,20 +19,22 @@
     <div class="px-4 py-4 lg:px-8 lg:py-1" id="header">
         <div class="flex items-center justify-between">
             <div class="logo">
-                <h4 class="logo-title">BitQuote Co.</h4>
+                <h4 class="hidden dark:block w-44 logo-title">BitQuote Co.</h4>
+                <h4 class="block dark:hidden w-44 logo-title">BitQuote Co.</h4>
             </div>
             <div class="navigation hidden lg:block">
                 <nav>
                     <ul class="flex items-center justify-between">
                         <li class="px-6 py-4"><a href="#slider" class="menu-item">Home</a></li>
                         <li class="px-6 py-4"><a href="#features" class="menu-item">Features</a></li>
-                        <li class="px-6 py-4"><a href="https://discord.gg/z9PvsEs2" class="menu-item">Discord</a></li>
-                        <li class="px-6 py-4"><a href="./api/index.html" class="menu-item">API</a></li>
+                        <!--<li class="px-6 py-4"><a href="https://discord.gg/z9PvsEs2" class="menu-item">Discord</a></li>-->
+                        <li class="px-6 py-4"><a href="#proj" class="menu-item">Projects</a></li>
                         <li class="px-6 py-4"><a href="#contact-us" class="menu-item">Contact Us</a></li>
                     </ul>
                 </nav>
             </div>
-            <div class="panel flex items-center"></div>
+            <div class="panel flex items-center"> 
+                <a href="./coming-soon.html" class="btn cursor-pointer bg-[#4a6cf7] mr-6 py-3 hidden lg:block">Log In</a>
                 <button type="button" class="cursor-pointer" id="change-mood">
                     <svg viewBox="0 0 23 23" class="cursor-pointer block dark:hidden" fill=""
                          xmlns="http://www.w3.org/2000/svg" width="30px">
@@ -349,7 +351,7 @@
         </div>
     </div>
     <br><br><br><br>
-    <div class="bg-white dark:bg-dark py-20 md:py-24 align-center" id="pricing">
+    <div class="bg-white dark:bg-dark py-20 md:py-24 align-center" id="proj">
         <div class="container px-4 md:px-10 lg:px-0 mx-auto">
             <div class="lg:w-1/2 2xl:w-1/2 mb-16 text-center mx-auto">
                 <h2 class="heading !leading-normal text-3xl lg:text-4xl">Our Projects
