--- a/404.html
+++ b/404.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>BQ || Lost!</title>
+  <meta http-equiv="refresh" content="10; URL=./index.html" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:100,300'>
   <style>
@@ -50,7 +51,7 @@ body{
 <!-- partial:index.partial.html -->
 <div id="main">
     	<div class="fof">
-        		<h1>Error 404</h1>
+        		<h1>Error 404.</h1>
     	</div>
 </div>
 <!-- partial -->
