--- a/coming-soon.html
+++ b/coming-soon.html
@@ -50,7 +50,7 @@ body{
 
 <div id="main">
     	<div class="fof">
-        		<h1>Coming Soon! This feature is (most probably) in our todo list.</h1>
+        		<h1>Coming Soon!</h1>
     	</div>
 </div>
 
