--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@
             <div class="container flex md:flex-row flex-wrap lg:flex-nowrap items-start justify-between px-4 mx-auto">
                 <div class="basis-full lg:basis-1/3 mb-6 lg:mb-0">
                     
-                    <p class="text-gray-500 dark:text-gray-400 opacity-90 text-lg">Copyright (c) 2023 BitQuote Co. <br>All Rights Reserved
+                    <p class="text-gray-500 dark:text-gray-400 opacity-90 text-lg">Copyright © 2023 BitQuote Co. <br>All Rights Reserved
                     </p>
                     <div class="mt-8">
                         <a href="./404.html" class="social">
@@ -768,7 +768,7 @@
         <div class="copy-right bg-[#4A6CF7] bg-opacity-10 p-8">
             <div class="container mx-auto text-gray-500 dark:text-gray-400 text-center text-base font-bold">
                 <!--<p>© By Aarav M. for BitQuote! - <a href="https://aarav.me/">Website</a></p>-->
-                <p>© By Aarav M. for BitQuote! - <a href="https://github.com/bitquote-co/bq-web/">Open Sourced at Github</a></p>
+                <p>© BitQuote Co. All rights reserved. - <a href="https://github.com/bitquote-co/bq-web/">Open Sourced at Github</a></p>
             </div>
         </div>
     </div>
