--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
                 <div class="price-table">
                     <div class="price-title">
                         <div class="flex justify-between mb-4">
-                            <h3 class="text-neutral-900 dark:text-white font-bold text-3xl">Axis API<span
+                            <h3 class="text-neutral-900 dark:text-white font-bold text-3xl">Bit API<span
                                     class="text-gray-500"></span></h3>
                             <h4 class="text-right text-neutral-900 dark:text-white font-medium text-2xl"></h4>
                         </div>
