Fixes with grammar (yet again)

--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                                     class="text-gray-500"></span></h3>
                             <h4 class="text-right text-neutral-900 dark:text-white font-medium text-2xl"></h4>
                         </div>
-                        <p class="text-gray-400 text-opacity-90 text-base font-medium">An Multi-Purpose Discord Bot to make you discord life bliss!
+                        <p class="text-gray-400 text-opacity-90 text-base font-medium">A Multi-Purpose Discord Bot to make your discord life bliss!
                         </p>
                         <a href="./coming-soon.html"><button type="submit" class="btn price-btn bg-[#4a6cf7]">View More</button></a>
                         <hr class="my-10 bg-gray-600 text-gray-600 w-full opacity-30">
@@ -404,7 +404,7 @@
                                     <path d="M2.90567 6.00024C2.68031 6.00024 2.48715 5.92812 2.294 5.74764L0.169254 3.43784C-0.0560926 3.18523 -0.0560926 2.78827 0.169254 2.53566C0.39461 2.28298 0.74873 2.28298 0.974086 2.53566L2.90567 4.66497L7.02642 0.189715C7.25175 -0.062913 7.60585 -0.062913 7.83118 0.189715C8.0566 0.442354 8.0566 0.839355 7.83118 1.09198L3.54957 5.78375C3.32415 5.92812 3.09882 6.00024 2.90567 6.00024Z"></path>
                                  </svg>
                               </span>
-                                Search Commands
+                                Commands For Searching
                             </li>
                             <li class="price-option">
                               <span class="price-list-style">
@@ -455,7 +455,7 @@
                                     class="text-gray-500"></span></h3>
                             <h4 class="text-right text-neutral-900 dark:text-white font-medium text-2xl"></h4>
                         </div>
-                        <p class="text-gray-400 text-opacity-90 text-base font-medium">An fast-free-multipurpose API with easy usage!
+                        <p class="text-gray-400 text-opacity-90 text-base font-medium">A fast, free and multi-purpose API with easy usage!
                         </p>
                         <a href="./api/index.html"><button type="submit" class="btn price-btn bg-[#4a6cf7]">View More</button></a>
                         <hr class="my-10 bg-gray-600 text-gray-600 w-full opacity-30">
@@ -476,7 +476,7 @@
                                     <path d="M2.90567 6.00024C2.68031 6.00024 2.48715 5.92812 2.294 5.74764L0.169254 3.43784C-0.0560926 3.18523 -0.0560926 2.78827 0.169254 2.53566C0.39461 2.28298 0.74873 2.28298 0.974086 2.53566L2.90567 4.66497L7.02642 0.189715C7.25175 -0.062913 7.60585 -0.062913 7.83118 0.189715C8.0566 0.442354 8.0566 0.839355 7.83118 1.09198L3.54957 5.78375C3.32415 5.92812 3.09882 6.00024 2.90567 6.00024Z"></path>
                                  </svg>
                               </span>
-                                Free Unlimited Usage
+                                Free to use
                             </li>
                             <li class="price-option">
                               <span class="price-list-style">
@@ -500,7 +500,7 @@
                                     <path d="M2.90567 6.00024C2.68031 6.00024 2.48715 5.92812 2.294 5.74764L0.169254 3.43784C-0.0560926 3.18523 -0.0560926 2.78827 0.169254 2.53566C0.39461 2.28298 0.74873 2.28298 0.974086 2.53566L2.90567 4.66497L7.02642 0.189715C7.25175 -0.062913 7.60585 -0.062913 7.83118 0.189715C8.0566 0.442354 8.0566 0.839355 7.83118 1.09198L3.54957 5.78375C3.32415 5.92812 3.09882 6.00024 2.90567 6.00024Z"></path>
                                  </svg>
                               </span>
-                                Multipurpose
+                                Multi-purpose
                             </li>
                             <li class="price-option">
                               <span class="price-list-style">
@@ -508,7 +508,7 @@
                                     <path d="M2.90567 6.00024C2.68031 6.00024 2.48715 5.92812 2.294 5.74764L0.169254 3.43784C-0.0560926 3.18523 -0.0560926 2.78827 0.169254 2.53566C0.39461 2.28298 0.74873 2.28298 0.974086 2.53566L2.90567 4.66497L7.02642 0.189715C7.25175 -0.062913 7.60585 -0.062913 7.83118 0.189715C8.0566 0.442354 8.0566 0.839355 7.83118 1.09198L3.54957 5.78375C3.32415 5.92812 3.09882 6.00024 2.90567 6.00024Z"></path>
                                  </svg>
                               </span>
-                                Many Language Compatible
+                                Compatible with a lot of languages
                             </li>
                         </ul>
                     </div>
