:pencil: Bug Fix

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                         </div>
                         <p class="text-gray-400 text-opacity-90 text-base font-medium">A Multi-Purpose Discord Bot to make your discord life bliss!
                         </p>
-                        <a href="./coming-soon.html"><button type="submit" class="btn price-btn bg-[#4a6cf7]">View More</button></a>
+                        <a href="./giva/index.html"><button type="submit" class="btn price-btn bg-[#4a6cf7]">View More</button></a>
                         <hr class="my-10 bg-gray-600 text-gray-600 w-full opacity-30">
                     </div>
                     <div class="price-description">
